# cookiecutter-platformer

./: .gitignore  CMakeLists.txt  README.md  build.sh  vcpkg.json
etc/: run_config.json
etc/input_maps/: controller_map.json  keyboard_map.json
src/: ConfigManager.cpp  ConfigManager.h  GameEngine.cpp  GameEngine.h  InputSystem.cpp  InputSystem.h  RenderSystem.cpp  RenderSystem.h  main.cpp  utils.cpp  utils.h
